# numerical

./: README.md  pyproject.toml
.cursor/rules/: education.mdc
__test__/: test_hello.py
src/numerical/: knn.py  logits.py  logits_torch.py  pca.py  xor.py
